Refractoring bookService